# split_keyboard

./: .flatpak-manifest.json  .git-blame-ignore-revs  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  README.md  split_keyboard_layout_on_pt_br.patch  splitkeyboard.flatpak  stub_layout.patch
LICENSES/: BSD-2-Clause.txt
kcm/: CMakeLists.txt  Messages.sh  kcm_plasmakeyboard.json  plasmakeyboardkcm.cpp  plasmakeyboardkcm.h
kcm/ui/: LocaleSelectorListView.qml  LocaleSelectorSidebar.qml  main.qml  main_handset.qml  main_mediacenter.qml
po/ar/: kcm_plasmakeyboard.po  plasma-keyboard.po
po/ca/: kcm_plasmakeyboard.po  plasma-keyboard.po
po/ca@valencia/: kcm_plasmakeyboard.po  plasma-keyboard.po
po/cs/: kcm_plasmakeyboard.po  plasma-keyboard.po
po/de/: kcm_plasmakeyboard.po  plasma-keyboard.po
po/es/: kcm_plasmakeyboard.po  plasma-keyboard.po
po/eu/: kcm_plasmakeyboard.po  plasma-keyboard.po
po/fi/: kcm_plasmakeyboard.po  plasma-keyboard.po
po/fr/: kcm_plasmakeyboard.po  plasma-keyboard.po
po/he/: kcm_plasmakeyboard.po  plasma-keyboard.po
po/is/: kcm_plasmakeyboard.po  plasma-keyboard.po
po/it/: kcm_plasmakeyboard.po  plasma-keyboard.po
po/ka/: kcm_plasmakeyboard.po  plasma-keyboard.po
po/ko/: kcm_plasmakeyboard.po  plasma-keyboard.po
po/lt/: kcm_plasmakeyboard.po  plasma-keyboard.po
po/lv/: kcm_plasmakeyboard.po  plasma-keyboard.po
po/nl/: kcm_plasmakeyboard.po  plasma-keyboard.po
po/pl/: kcm_plasmakeyboard.po  plasma-keyboard.po
po/pt_BR/: kcm_plasmakeyboard.po  plasma-keyboard.po
po/ru/: kcm_plasmakeyboard.po  plasma-keyboard.po
po/sl/: kcm_plasmakeyboard.po  plasma-keyboard.po
po/sv/: kcm_plasmakeyboard.po  plasma-keyboard.po
po/tr/: kcm_plasmakeyboard.po  plasma-keyboard.po
po/uk/: kcm_plasmakeyboard.po  plasma-keyboard.po
po/zh_CN/: kcm_plasmakeyboard.po  plasma-keyboard.po
po/zh_TW/: kcm_plasmakeyboard.po  plasma-keyboard.po
repo/: summary  summary.idx
repo/refs/heads/app/org.kde.plasma.keyboard/x86_64/: master
repo/refs/heads/appstream/: x86_64
repo/refs/heads/appstream2/: x86_64
repo/refs/heads/runtime/org.kde.plasma.keyboard.Debug/x86_64/: master
repo/refs/heads/runtime/org.kde.plasma.keyboard.Locale/x86_64/: master
repo/summaries/: 09ded31aaf223d56875ab044a7ae8041ace1e5137fe06e32e4d629aab479040b-c7f3519234b37228ba157c10e8e6a97871a70274948a0bc666051f68714fa7d2.delta  3e7582fb2fd43862c2f9de37fa59a29466f8533498ff3db15b490af7ed0a9cad-c7f3519234b37228ba157c10e8e6a97871a70274948a0bc666051f68714fa7d2.delta
src/: CMakeLists.txt  Messages.sh  inputlisteneritem.cpp  inputlisteneritem.h  inputmethod.cpp  inputmethod_p.h  inputpanelwindow.cpp  inputpanelwindow.h  inputplugin.cpp  inputplugin.h  main.cpp  org.kde.plasma.keyboard.desktop  org.kde.plasma.keyboard.metainfo.xml  plasmakeyboardsettings.kcfg  plasmakeyboardsettings.kcfgc  qwaylandinputpanelshellintegration.cpp  qwaylandinputpanelshellintegration_p.h  qwaylandinputpanelsurface.cpp  qwaylandinputpanelsurface_p.h  resources.qrc  vibration.cpp  vibration.h  vibrationevent.h
src/layouts/fallback/: .xdp-.main.qml.kate-swp-Fvm9J5  main.qml  symbols.qml
src/layouts/ja_JP/: main.qml
src/layouts/pt_BR/: .xdp-.main.qml.kate-swp-GF0xDY  main.qml
src/qml/: KeyboardLayoutParts.qml  LanguagePopup.qml  LanguagePopupDelegate.qml  main.qml
src/qmlplugin/: BreezeConstants.qml  BreezeKeyPanel.qml  BreezePopup.qml
src/sounds/: keyboard_tick2_quiet.wav.license
src/styles/: CMakeLists.txt
src/styles/breeze/: style.qml
